--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto | Portafolio de Evidencias</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <style>
         .contacto-container {
             display: flex;
@@ -79,4 +79,5 @@
         <p>&copy; 2025 - Portafolio de Evidencias</p>
     </footer>
 </body>
+
 </html>
