--- a/mundos.html
+++ b/mundos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mundos Virtuales | Portafolio</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -53,4 +53,5 @@ Una construcción sencilla compuesta principalmente por cilindros y cubos. Parec
         <p>&copy; 2025 - Portafolio de Evidencias</p>
     </footer>
 </body>
+
 </html>
