--- a/paginas.html
+++ b/paginas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Páginas | Portafolio de Evidencias</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -109,4 +109,5 @@ Permite navegar entre las secciones desde un menú simple.
         <p>&copy; 2025 - Portafolio de Evidencias</p>
     </footer>
 </body>
+
 </html>
