Fix HTML encoding issues in paginas.html

--- a/paginas.html
+++ b/paginas.html
@@ -85,7 +85,7 @@ La idea es presentar todo de forma estética y equilibrada.
 Sirve como una composición creativa o demostración visual.
         </p>
 
-        <button onclick="window.open('https://heda081001hmcrlna8-commits.github.io/estetica-de-la-pagina/')">Visitar página</button>
+        <button onclick="window.open('https://agelgabriel.github.io/estetic/')">Visitar página</button>
     </section>    <section>
         <h2>Combinacíon-Galeria,Videos y Audios</h2>
     <img src="img/5.jpeg" alt="pagina con menus de incio, galeria, video y audio">
@@ -111,3 +111,4 @@ Permite navegar entre las secciones desde un menú simple.
 </body>
 
 </html>
+
